[fix] swaggerと実際のJSONタグの整合性を確保
