# app/domain/entity/work.go
@@ -12,7 +12,7 @@ type (
 		Title       string `db:"title"`
 		Description string `db:"description"`
 		Thumbnail   string `db:"thumbnail"`
-		URL         string `db:"url"`
+		WorkUrl     string `db:"work_url"`
 		MovieUrl    string `db:"movie_url"`
 		Security    int    `db:"security"`
 	}
@@ -32,13 +32,14 @@ type (
 		Thumbnail   string   `db:"thumbnail"`
 		ImageURLs   []string `db:"image_url"`
 		Tags        []string `db:"tag"`
-		WorkURL     string   `db:"url"`
+		WorkUrl     string   `db:"url"`
 		MovieUrl    string   `db:"movie_url"`
 		Security    int      `db:"security"`
 	}
 	ReadWorksList struct {
 		WorkID      string `db:"id"`
 		Title       string `db:"title"`
+		Thumbnail   string `db:"thumbnail"`
 		Images      string `db:"image_url"`
 		Description string `db:"description"`
 		Icon        string `db:"icon"`
@@ -46,9 +47,10 @@ type (
 	UpdateWork struct {
 		Title       string   `db:"title"`
 		Description string   `db:"description"`
+		Thumbnail   string   `db:"thumbnail"`
 		ImageURLs   []string `db:"image_url"`
 		Tags        []string `db:"tag"`
-		WorkURL     string   `db:"url"`
+		WorkUrl     string   `db:"work_url"`
 		MovieUrl    string   `db:"movie_url"`
 		Security    int      `db:"security"`
 	}
@@ -64,7 +66,7 @@ func NewWork(work request.CreateWorkRequest) (*WorkTable, error) {
 		Title:       work.Title,
 		Description: work.Description,
 		Thumbnail:   work.Thumbnail,
-		URL:         work.WorkUrl,
+		WorkUrl:     work.WorkUrl,
 		MovieUrl:    work.MovieUrl,
 		Security:    work.Security,
 	}
