# swagger/swagger.yaml
@@ -437,10 +437,6 @@ paths:
       responses:
         '200':
           description: OK
-          content:
-            application/json:
-              schema:
-                $ref: ''
         '400':
           description: Bad Request
           content:
@@ -624,6 +620,10 @@ components:
           type: string
           description: 説明文
           example: 我々取材班はFUNcyチームのメンバーがタイムカードを切って残業している姿を激写してしまった．
+        thumbnail:
+          type: string
+          description: サムネイル
+          example: https://pbs.twimg.com/hoge/fuga
         images:
           type: array
           items:
@@ -633,10 +633,14 @@ components:
                 type: string
                 description: 画像
                 example: ijaigjjasopdfjgoiwergio
-        URL:
+        work_url:
           type: string
           description: 作品のURL
           example: https://pbs.twimg.com/profile_images/1380218148649984001/27Mwc0-G_400x400.jpg
+        movie_url:
+          type: string
+          description: 動画のURL
+          example: https://youtube.com/hoge/fuga
         tags:
           type: array
           items:
